@@ -1,4 +1,11 @@
 ===== Stable Versions ========
+[B]v1.0.9 (19/9/2014)[/B]
+-Updated linux x64 Acestreamengine to version 3.0.0-b2
+-Updated Openelec x64 Acestreamengine to version 3.0.0-b2
+-Updated Android internal Acestreamengine to version 2.3.1
+-Updated Android Apks in repository to match latest version of the engine and player
+-Added support for android x86 (Acestream only)
+
 [B]v1.0.8 (17/9/2014)[/B]
 -Updated acestreamengine for Windows (version 2.3.0-Next)
 -Updated acestreamengine for Linux x64 and Openelec x64 (version 3.0.0 b1)
